<resources>
    <string name="app_name">Movie Rater</string>
    <string name="eng">English</string>
    <string name="chi">Chinese</string>
    <string name="malay">Malay</string>
    <string name="tamil">Tamil</string>
    <string name="vio">Violence</string>
    <string name="language">Language</string>
    <string name="nsfaa">Not Suitable for all audience</string>
    <string name="langname">English</string>
    <string name="checknsfaa"> Suitable for all ages = true</string>
    <string name="checkvio"> </string>
    <string name="checkbadlang"> </string>
</resources>
