
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
        android:text="Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/textView2"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Enter the title of movie"
            android:text="Venom"
            android:id="@+id/editText2"/>

    <TextView
            android:text="Description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/textView3"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="Enter a short description of the movie"
            android:text="When Eddie Brock acquires the powers of a symbiote, he will have to release his alter-ego 'Venom' to save his life"

            android:id="@+id/editText3"/>
    <TextView
            android:text="Language"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/textView4"/>
    <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
        <RadioButton android:id="@+id/radio_eng"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/eng"
                     android:checked="true"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_chi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/chi"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_malay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/malay"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_tamil"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/tamil"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/langname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/langname"
                     android:visibility="gone"
                     android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <TextView
            android:text="Release Date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="Enter release date"
            android:id="@+id/textView5"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:text="03-10-2018"
            android:id="@+id/editText5"/>
    <CheckBox android:id="@+id/checkbox_nsfaa"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/nsfaa"
              android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checknsfaa"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/checknsfaa"
              android:visibility="gone"
              android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkvio"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/checkvio"
              android:visibility="gone"
              android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbadlang"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/checkbadlang"
              android:visibility="gone"
              android:onClick="onCheckboxClicked"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
    >

    <CheckBox android:id="@+id/checkbox_vio"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:text="@string/vio"
              android:visibility="gone"
              android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_language"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:text="@string/language"
              android:visibility="gone"
              android:onClick="onCheckboxClicked"/>
    </LinearLayout>


</LinearLayout>